--- a/src/Components/PaycheckForm/PaycheckForm.css
+++ b/src/Components/PaycheckForm/PaycheckForm.css
@@ -1,10 +1,10 @@
-#enterPaycheck {
+.enterPaycheck {
   text-align: center;
   max-width: 600px;
   margin: 0 auto;
 }
 
-button {
+.enterPaycheck button {
   display: block;
   margin: 0 auto;
   border: 1px solid #aaa;
@@ -15,13 +15,13 @@ button {
   font-weight: bold;
 }
 
-button:hover {
+.enterPaycheck button:hover {
   background-color: #444;
   color: white;
   cursor: pointer;
 }
 
-input,
+.enterPaycheck input,
 select {
   display: block;
   font-size: 1.1em;
@@ -37,11 +37,11 @@ select {
   border-left: 1px solid #ddd;
 }
 
-input[type="number"] {
+.enterPaycheck input[type="number"] {
   padding: 10px;
 }
 
-label {
+.enterPaycheck label {
   margin: 0px auto;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
